fixed overflowing item description

--- a/src/styles/ItemCard.css
+++ b/src/styles/ItemCard.css
@@ -34,6 +34,8 @@
   overflow-y: auto;
   border-bottom: 1px solid #e6e6e6;
   height: 0px;
+  overflow-x: hidden;
+  word-break: break-word;
 }
 
 .card_details {
